--- a/src/Story/index.css
+++ b/src/Story/index.css
@@ -6,7 +6,7 @@
   flex-wrap: nowrap;
   scroll-snap-type: x mandatory;
   overflow: auto;
-  /* TODO: snap scrolling */
+  position: relative;
 }
 
 .story__splash {
@@ -23,7 +23,6 @@
   top: 0;
   left: 0;
   z-index: 1;
-  opacity: 0.5;
 }
 
 .story__overlay {
@@ -56,6 +55,10 @@
   scroll-snap-align: center;
 }
 
+.story__body > *:first-child {
+  margin-top: 0;
+}
+
 .story__body > *:last-child::after {
   content: "";
   display: block;
@@ -63,4 +66,21 @@
   height: 1px;
   margin-right: -5vw;
   margin-left: auto;
+}
+
+.story__sentinel {
+  position: absolute;
+  width: 0;
+  height: 100%;
+  width: 1px;
+}
+
+.story__sentinel--artwork-fades-out {
+  width: 1px;
+  left: calc(200vw - 1px);
+}
+
+.story__sentinel--artwork-fades-in {
+  width: 1px;
+  left: 100vw;
 }
